# damn-vuln-blockchain

./: Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  client.sh  index.html  network.sh  search-index.js  settings.html  sidebar-items.js  source-files.js  upload.py
.github/workflows/: linux.yml  upload-doc.yml
asset/: index.html  sidebar-items.js
assets/: attack-network-topology.draw.io  tx-workflow.draw.io
blockchain/: struct.Chain.html
client/: Cargo.toml
client/src/: main.rs
damn_vuln_blockchain/: all.html  index.html  sidebar-items.js
damn_vuln_blockchain/api/: index.html  struct.Client.html
damn_vuln_blockchain/asset/: index.html  sidebar-items.js  struct.Asset.html  struct.AssetLedger.html  struct.ChangeAssetOwner.html  struct.ChangeAssetOwnerBuilder.html  struct.ChooseValidator.html  struct.DumpLedger.html  struct.GetAssetInfo.html  struct.GetPeerAssets.html  struct.GetStake.html  struct.InitNetwork.html  struct.InitNetworkBuilder.html  struct.ReplaceLedger.html  struct.SetStake.html  (+5 more)
dwb/: all.html  enum.Mode.html  fn.cli.html  fn.get_json_err.html  fn.greet.html  fn.main.html  index.html  sidebar-items.js  struct.Config.html
error/: enum.ChainError.html  index.html  type.ChainResult.html
frontend/: index.html
logs/: enum.Action.html  struct.Gossip.html
src/: api.rs  asset.rs  block.rs  blockchain.rs  chain.rs  client.rs  config.rs  discovery.rs  error.rs  lib.rs  logs.rs  main.rs  payload.rs  routes.rs  test.rs  utils.rs  worldview.rs
utils/: fn.get_rand_string.html
worldview/: Cargo.toml
worldview/src/: client.rs  main.rs
(+139 files in other folders)
