[package]
name = "damn-vuln-blockchain"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "dwb"
path = "src/main.rs"

[dependencies]
actix-web = "3.3.2"
actix = "0.10"
serde = "1"
serde_json = "1"
thiserror = "1.0.23"
sha2 = "0.9"
data-encoding = "2.3.1"
rand = "0.8"
chrono = "0.4"
derive_more = "0.99"
clap = "2.33"
