[package]
name = "worldview"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
damn-vuln-blockchain = { version = "0.1.0", path="../" }
actix = "0.10"
clap = "2.33"
serde = "1"
serde_json = "1"
pretty_env_logger = "0.4.0"
log = "0.4.11"
